fix: services issues

--- a/backend/discovery-server/src/main/resources/application.properties
+++ b/backend/discovery-server/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=discovery-server
+# application.properties (pour exécution locale standard)
+server.port=8761
+
+spring.application.name=discovery-server
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.instance.hostname=localhost
+
+# Actuator configuration
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
