--- a/backend/ms-public-catalog/src/main/resources/application.properties
+++ b/backend/ms-public-catalog/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=ms-public-catalog
+
+spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.fail-fast=true
+spring.config.import=optional:configserver:http://localhost:8888
+
+server.port=0
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+
+spring.cloud.config.enabled=false
+# Désactive la vérification d'importation de config (si 'import-check.enabled' existe et est activé)
+spring.cloud.config.import-check.enabled=false
+
+# Désactive la connexion à Eureka Server
+eureka.client.enabled=false
+
+# Pour les tests, utilisez une base de données H2 en mémoire au lieu de PostgreSQL
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# DDL-auto peut être 'create-drop' pour les tests, pour un schéma frais à chaque fois
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret=someTestSecretKeyThatIsLongEnoughForSigningJWTs
+jwt.expiration=3600000
