--- a/backend/ms-users/src/main/resources/application.properties
+++ b/backend/ms-users/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=ms-users
+
+# src/test/resources/application.properties
+
+# Désactive Spring Cloud Config pour les tests
+spring.cloud.config.enabled=false
+# S'assure que la vérification d'importation de config est désactivée
+spring.cloud.config.import-check.enabled=false
+
+# Désactive Eureka Client pour les tests
+eureka.client.enabled=false
+
+# Définit un port aléatoire pour le serveur embarqué pendant les tests
+# Cela évite les conflits de port si plusieurs tests s'exécutent en parallèle
+server.port=0
+
+# Utilise une base de données H2 en mémoire pour les tests
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Gère le schéma de la base de données H2
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT secret pour les tests (un simple secret bidon suffit)
+jwt.secret=testsecretforjwtvalidationinunitests
+jwt.expiration=3600000
