--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=api-gateway
+
+server.port=8080
+
+spring.application.name=api-gateway
+
+# Connexion au Config Server
+spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.fail-fast=true
+spring.config.import=optional:configserver:http://localhost:8888
+
+# Connexion à Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+# Actuator configuration
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
