--- a/backend/ms-books/src/main/resources/application.properties
+++ b/backend/ms-books/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=ms-books
+
+spring.cloud.config.enabled=false
+# Désactive la vérification d'importation de config (si 'import-check.enabled' existe et est activé)
+spring.cloud.config.import-check.enabled=false
+
+# Désactive la connexion à Eureka Server
+eureka.client.enabled=false
+# Pour s'assurer que le port 0 ne pose pas de problème si Eureka est désactivé
+server.port=0
+
+# Pour les tests, utilisez une base de données H2 en mémoire au lieu de PostgreSQL
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# DDL-auto peut être 'create-drop' pour les tests, pour un schéma frais à chaque fois
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret=someTestSecretKeyThatIsLongEnoughForSigningJWTs
+jwt.expiration=3600000
