--- a/backend/config-server/src/main/resources/application.properties
+++ b/backend/config-server/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=config-server
 
+server.port=8888
+
+spring.cloud.config.server.git.uri=file:///${user.dir}/../infra/configs
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
