--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -1,17 +1,25 @@
-spring.application.name=api-gateway
-
 server.port=8080
-
 spring.application.name=api-gateway
 
-# Connexion au Config Server
-spring.cloud.config.uri=http://localhost:8888
-spring.cloud.config.fail-fast=true
-spring.config.import=optional:configserver:http://localhost:8888
-
-# Connexion à Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-# Actuator configuration
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+# Configuration des routes de la passerelle
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+
+# Routes - Attention à l'indexation [0], [1], etc.
+spring.cloud.gateway.routes[0].id=ms-users
+spring.cloud.gateway.routes[0].uri=lb://MS-USERS
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**, /api/auth/**
+
+spring.cloud.gateway.routes[1].id=ms-books
+spring.cloud.gateway.routes[1].uri=lb://MS-BOOKS
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/books/**, /api/authors/**
+
+spring.cloud.gateway.routes[2].id=ms-loans
+spring.cloud.gateway.routes[2].uri=lb://MS-LOANS
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/loans/**, /api/returns/**, /api/reservations/**
+
+spring.cloud.gateway.routes[3].id=ms-public-catalog
+spring.cloud.gateway.routes[3].uri=lb://MS-PUBLIC-CATALOG
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/public/**
